# bsrvcore

./: .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark_cli.cc  benchmark_cli.h  benchmark_client.cc  benchmark_client.h  benchmark_main.cc  benchmark_report.cc  benchmark_report.h  benchmark_runner.cc  benchmark_runner.h  benchmark_scenarios.cc  benchmark_scenarios.h  benchmark_subprocess.cc  benchmark_subprocess.h  benchmark_types.h  benchmark_util.cc  benchmark_util.h
docs/: README.md  (+1 more)
examples/: CMakeLists.txt  example_aspect_basic.cc  example_logger_custom.cc  example_session_context.cc  oop_developing.cc  quick_start.cc  use_logger.cc
examples/aspects/: CMakeLists.txt  basic.cc
examples/bsrvrun/: bsrvrun.yaml
examples/bsrvrun/plugins/: CMakeLists.txt  demo_aspect_plugin.cc  demo_handler_plugin.cc  demo_logger_plugin.cc  demo_service_api.h  demo_service_plugin.cc
examples/c-binding/: CMakeLists.txt  quick_start.c
examples/client-tasks/: CMakeLists.txt  http_proxy_request.cc  http_request.cc  sse_events.cc
examples/getting-started/: CMakeLists.txt  quick_start.cc
examples/http-server/: CMakeLists.txt  configuration.cc
examples/logging/: CMakeLists.txt  custom_logger.cc
examples/oai/: CMakeLists.txt  completion.cc
examples/routing/: CMakeLists.txt  oop_handler.cc
examples/sessions-context/: CMakeLists.txt  basic.cc
examples/sse/: CMakeLists.txt  stream.cc
examples/websocket-tasks/: CMakeLists.txt  request.cc  service.cc
src/: CMakeLists.txt  bsrvcore.pc.in
src/allocator/: CMakeLists.txt  allocator.cc
src/bsrvrun/: CMakeLists.txt  bsrvrun_main.cc  config_loader.cc  config_loader.h  config_loader_detail.h  config_loader_loading.cc  config_loader_parsing.cc  config_types.h  parameter_map_impl.cc  parameter_map_impl.h  plugin_loader.cc  plugin_loader.h  server_builder.cc  server_builder.h  string.cc
src/c_binding/: CMakeLists.txt  bsrvcore-c.pc.in  callback_adapters.cc  server.cc  task.cc
src/connection/: CMakeLists.txt  http_client_session.cc  http_client_task.cc  http_server_connection.cc  http_server_task.cc  http_sse_client_task.cc  server_set_cookie.cc  sse_event_parser.cc
src/connection/client/: http_client_session.cc  http_client_session_cookie.cc  http_client_task.cc  http_client_task_callbacks.cc  http_client_task_flow.cc  http_sse_client_task.cc  http_sse_client_task_startup.cc  http_sse_client_task_stream.cc  multipart_generator.cc  put_generator.cc  request_assembler.cc  sse_event_parser.cc  stream_builder.cc  websocket_client_task.cc  websocket_client_task_startup.cc  websocket_client_task_stream.cc
src/connection/server/: http_server_connection.cc  http_server_task.cc  http_server_task_base.cc  http_server_task_lifecycle.cc  multipart_parser.cc  put_processor.cc  request_body_processors.cc  server_set_cookie.cc  websocket_server_task.cc
src/connection/websocket/: websocket_task_base.cc
src/core/: CMakeLists.txt  blue_print.cc  empty_logger.cc  http_server.cc  http_server_accept.cc  http_server_config.cc  http_server_construct.cc  http_server_route_config.cc  http_server_runtime.cc  http_server_runtime_config.cc  http_server_util.cc
src/file/: CMakeLists.txt  file_reader.cc  file_writer.cc
src/oai/: CMakeLists.txt
src/oai/completion/: CMakeLists.txt  oai_completion.cc  oai_completion_detail.h  oai_completion_factory.cc  oai_completion_request.cc  oai_completion_response.cc  oai_completion_state.cc
src/route/: CMakeLists.txt  computing_route_handler.cc  empty_route_handler.cc  http_route_table.cc  http_route_table_layer.cc  http_route_table_match.cc  http_route_table_mount.cc  http_route_table_registry.cc
src/route/impl/: http_route_target_validator.cc  http_route_target_validator.h
src/session/: CMakeLists.txt  context.cc  session_context_entry.cc  session_key_heap_entry.cc  session_map.cc  session_map_cleaner.cc
tests/: CMakeLists.txt  integration_http_server_test.cc  server_configuration_test.cc  server_configuration_test.cpp  stress_context_test.cc  stress_http_server_concurrency_test.cc  stress_server_post_test.cc  unit_attribute_test.cc  unit_bsrvrun_config_test.cc  unit_cookie_test.cc  unit_http_client_task_test.cc  unit_http_server_task_test.cc  unit_http_sse_client_task_test.cc  unit_logger_test.cc  unit_route_table_test.cc
tests/general/: CMakeLists.txt
tests/general/bsrvrun/: CMakeLists.txt  integration_bsrvrun_runtime_test.cc  unit_bsrvrun_config_test.cc
tests/general/c_binding/: CMakeLists.txt  unit_c_binding_header_smoke.c  unit_c_binding_http_server_test.cc
tests/general/connection/: CMakeLists.txt  acceptance_session_test.cc  integration_http_server_test.cc  integration_websocket_tasks_test.cc  unit_cookie_test.cc  unit_file_module_test.cc  unit_http_client_task_test.cc  unit_http_server_task_test.cc  unit_http_server_websocket_upgrade_test.cc  unit_http_sse_client_task_test.cc  unit_request_assembler_test.cc  unit_request_body_processor_test.cc  unit_upload_client_test.cc  unit_websocket_client_task_test.cc  unit_websocket_server_task_test.cc  unit_websocket_task_base_test.cc
tests/general/core/: CMakeLists.txt  server_configuration_test.cc  unit_async_waiter_test.cc  unit_attribute_test.cc  unit_context_test.cc  unit_logger_test.cc  unit_public_traits_test.cc
tests/general/oai/: CMakeLists.txt  integration_oai_completion_deepseek_test.cc  unit_oai_completion_test.cc
tests/general/route/: CMakeLists.txt  acceptance_routing_test.cc  unit_blue_print_test.cc  unit_route_table_teardown_test.cc  unit_route_table_test.cc
tests/general/session/: CMakeLists.txt  unit_http_client_session_test.cc
tests/stress/: CMakeLists.txt
tests/stress/client/: CMakeLists.txt  stress_client_session_test.cc
tests/stress/connection/: CMakeLists.txt  stress_connection_management_test.cc  stress_http_server_concurrency_test.cc  stress_keep_alive_route_param_test.cc  stress_server_post_test.cc  stress_websocket_tasks_test.cc
tests/support/: stress_test_common.h  test_http_client.h  test_http_client_task.h  test_tls_context.h
(+222 files in other folders)
